# hal_bluenrg

./: CMakeLists.txt
bluenrg_family/: CMakeLists.txt
bluenrg_family/bluenrg_3/: CMakeLists.txt
bluenrg_family/bluenrg_3/Drivers/BSP/: README.txt
bluenrg_family/bluenrg_3/Drivers/BSP/Inc/: bluenrg_lp_evb_config.h  steval_idb010V1_config.h  steval_idb012V1_config.h  steval_idb012V2_config.h  steval_idb013V1_config.h  steval_qfn32_config.h
bluenrg_family/bluenrg_3/Drivers/BSP/Src/: bluenrg_lp_evb_io.c  bluenrg_lp_evb_spi.c
bluenrg_family/bluenrg_3/Drivers/CMSIS/Device/ST/BlueNRG_LP/Include/: BlueNRG_LPF.h  bluenrg_lpx.h  system_BlueNRG_LP.h
bluenrg_family/bluenrg_3/Drivers/CMSIS/Device/ST/BlueNRG_LP/Source/: system_BlueNRG_LP.c
bluenrg_family/bluenrg_3/Drivers/CMSIS/SVD/: BlueNRG_LP.svd  BlueNRG_LPF.svd  BlueNRG_LPS.svd  BlueNRG_LPS__SVDConv.bat  BlueNRG_LP__SVDConv.bat  template.xml
bluenrg_family/bluenrg_3/Drivers/Peripherals_Drivers/Inc/: rf_driver_hal.h  rf_driver_hal_adc.h  rf_driver_hal_comp.h  rf_driver_hal_cortex.h  rf_driver_hal_def.h  rf_driver_hal_gpio_ex.h  rf_driver_hal_pka_v75.h  rf_driver_hal_power_manager.h  rf_driver_hal_pwr.h  rf_driver_hal_pwr_ex.h  rf_driver_hal_rcc.h  rf_driver_hal_rcc_ex.h  rf_driver_hal_rng_v168.h  rf_driver_hal_tim.h  rf_driver_hal_tim_ex.h  rf_driver_hal_vtimer.h  rf_driver_hal_vtimer_subghz.h  rf_driver_ll_adc.h  rf_driver_ll_bus.h  rf_driver_ll_comp.h  rf_driver_ll_cortex.h  rf_driver_ll_crc.h  rf_driver_ll_dac.h  rf_driver_ll_dma.h  rf_driver_ll_dmamux.h  rf_driver_ll_exti.h  rf_driver_ll_flash.h  rf_driver_ll_gpio.h  rf_driver_ll_i2c.h  rf_driver_ll_iwdg.h  rf_driver_ll_lcd.h  rf_driver_ll_lcsc.h  rf_driver_ll_lpawur_rfip.h  rf_driver_ll_lpuart.h  rf_driver_ll_packet_subghz.h  rf_driver_ll_pka_v7c.h  rf_driver_ll_pwr.h  rf_driver_ll_radio_2g4.h  rf_driver_ll_radio_subghz.h  rf_driver_ll_rcc.h  (+11 more)
bluenrg_family/bluenrg_3/Drivers/Peripherals_Drivers/Src/: rf_driver_hal_adc.c  rf_driver_hal_comp.c  rf_driver_hal_pka_v75.c  rf_driver_hal_power_manager.c  rf_driver_hal_radio_2g4.c  rf_driver_hal_radio_subghz.c  rf_driver_hal_rcc.c  rf_driver_hal_rcc_ex.c  rf_driver_hal_rng_v168.c  rf_driver_hal_vtimer_subghz.c  rf_driver_ll_comp.c  rf_driver_ll_dac.c  rf_driver_ll_lcd.c  rf_driver_ll_lcsc.c  rf_driver_ll_lpawur_rfip.c  rf_driver_ll_packet_subghz.c  rf_driver_ll_pka_v7c.c  rf_driver_ll_pwr.c  rf_driver_ll_radio_2g4.c  rf_driver_ll_radio_subghz.c  rf_driver_ll_rcc.c  rf_driver_ll_rng_v168.c  rf_driver_ll_sequencer.c  rf_driver_ll_timer_subghz.c  rf_driver_ll_utils.c
bluenrg_family/bluenrg_3/Middlewares/ST/BLECNTR/Inc/: ble_controller.h  ble_controller_bluenrg_lp.h
bluenrg_family/bluenrg_3/Middlewares/ST/BLECNTR/Src/: ble_controller_bluenrg_lp.c
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/OTA/inc/: OTA_btl.h
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/OTA/src/: OTA_btl.c
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/Profile_Central/Inc/: master_basic_profile.h
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/Profiles/Inc/: gatt_profile.h
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/Queued_Write/Inc/: eatt_pwrq.h
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/Queued_Write/Src/: eatt_pwrq.c
bluenrg_family/bluenrg_3/Middlewares/ST/BLE_Application/layers_inc/: ble_const.h
bluenrg_family/bluenrg_3/Middlewares/ST/Bluetooth_LE/inc/: ble_status.h  bleplat.h  bleplat_cntr.h  bluenrg_lp_api.h  bluenrg_lp_events.h  bluenrg_lp_gatt.h  bluenrg_lp_stack.h  bluenrg_lp_stack_3_2a.h  bluenrg_lp_stack_4.h  stack_user_cfg.h  stack_user_cfg_4.h
bluenrg_family/bluenrg_3/Middlewares/ST/Bluetooth_LE/src/: stack_user_cfg.c  stack_user_cfg_3_2a.c
bluenrg_family/bluenrg_3/Middlewares/ST/External_micro/: README.txt
bluenrg_family/bluenrg_3/Middlewares/ST/External_micro/SimpleBlueNRG-LP_HCI/hci/: bluenrg_lp_events.c  bluenrg_lp_hci_le.c
bluenrg_family/bluenrg_3/Middlewares/ST/External_micro/SimpleBlueNRG-LP_HCI/hci/controller/: bluenrg_lp_gap_aci.c  bluenrg_lp_gatt_aci.c  bluenrg_lp_hal_aci.c  bluenrg_lp_l2cap_aci.c
bluenrg_family/bluenrg_3/Middlewares/ST/External_micro/SimpleBlueNRG-LP_HCI/includes/: bluenrg_lp_events.h  bluenrg_lp_gap_aci.h  bluenrg_lp_gatt_aci.h  bluenrg_lp_hal_aci.h  bluenrg_lp_hci_le.h  bluenrg_lp_l2cap_aci.h  bluenrg_lp_types.h  bluenrg_utils.h  hci.h  hci_const.h
bluenrg_family/bluenrg_3/Middlewares/ST/PKAMGR/Inc/: pka_manager.h  pka_manager_bluenrg_lpf.h  pka_manager_bluenrg_lps.h
bluenrg_family/bluenrg_3/Middlewares/ST/PKAMGR/Src/: pka_manager_bluenrg_lp.c  pka_manager_bluenrg_lpf.c
bluenrg_family/bluenrg_3/Middlewares/ST/RNGMGR/Src/: rng_manager_bluenrg_lpf.c
bluenrg_family/bluenrg_3/Middlewares/ST/hal/Inc/: hal_miscutil.h  miscutil.h
bluenrg_family/bluenrg_3/Middlewares/ST/hal/Src/: hal_miscutil.c  miscutil.c
bluenrg_family/bluenrg_3/Peripherals_Drivers/Inc/: rf_driver_hal_adc.h
bluenrg_family/bluenrg_3/Peripherals_Drivers/Src/: rf_driver_hal_power_manager.c
bluenrg_family/bluenrg_3/hci_if/DTM/Inc/: DTM_cmd_db.h  DTM_config.h  DTM_config_3_2a.h  DTM_config_4.h  aci_gatt_nwk.h  aci_l2cap_nwk.h  cmd.h  custom_ble_stack_conf.h  dtm_cmd_en.h  dtm_cmd_stack_en.h  hci_parser.h  hw_config.h  pawr_buff_alloc.h  transport_layer.h
bluenrg_family/bluenrg_3/hci_if/DTM/Src/: DTM_boot.c  DTM_burst.c  DTM_cmd_db.c  DTM_cmds.c  DTM_main.c  aci_adv_nwk.c  aci_gatt_nwk.c  aci_l2cap_nwk.c  hci_parser.c  hw_config.c  pawr_buff_alloc.c  rf_device_it.c  transport_layer.c
bluenrg_family/bluenrglp/: CMakeLists.txt
bluenrg_family/bluenrglp/drivers/include/: bluenrg_lpx.h  rf_device_hal_conf.h  rf_driver_assert.h  rf_driver_assert_template.h  rf_driver_hal.h  rf_driver_hal_adc.h  rf_driver_hal_adc_ex.h  rf_driver_hal_conf.h  rf_driver_hal_cortex.h  rf_driver_hal_crc.h  rf_driver_hal_crc_ex.h  rf_driver_hal_def.h  rf_driver_hal_dma.h  rf_driver_hal_exti.h  rf_driver_hal_flash.h  rf_driver_hal_flash_ex.h  rf_driver_hal_gpio.h  rf_driver_hal_gpio_ex.h  rf_driver_hal_i2c.h  rf_driver_hal_i2c_ex.h  (+55 more)
dts/st/bluenrg_3/: bluenrg-355.dtsi  bluenrg-372.dtsi
(+93 files in other folders)
